Updated case study links
Each to case study pages

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                   <h3 class="card__heading" alt="The Pillyr Foundation">The Pillyr Foundation</h3>
                   <p class="card__icons"><i class="fas fa-pencil-alt" alt="graphic design"></i>&nbsp;&nbsp;<i class="fas fa-code" alt="design &amp; development"></i></p>
                   <p class="card__description" alt="Project description: Branding, design, and web development for Atlanta nonprofit organization">Branding, design, and web development for this nonprofit organization focused on improving public space in the city of Atlanta.</p>
-                  <a class="card__button" href="https://www.pillyr.org" target="_blank" alt="The Pillyr Foundation — Learn more button">Learn More</a>
+                  <a class="card__button" href="case-one.html" alt="The Pillyr Foundation — Learn more button">Learn More</a>
                </div>
             </section>
 
@@ -177,7 +177,7 @@
                   <h3 class="card__heading" alt="Donorgraphics">Donorgraphics</h3>
                   <p class="card__icons"><i class="fas fa-pencil-alt" alt="graphic design"></i></p>
                   <p class="card__description" alt="Project description: Using donor data collected by agency One &amp; All, these infographics were designed to communicate changes to annual donor behavior.">Using donor data collected by agency One &amp; All, these infographics were designed to communicate changes to annual donor behavior. A One &amp; All agency project.</p>
-                  <a class="card__button" href="http://www.donorgraphics.com" target="_blank" alt="Donorgraphics - Learn more button">Learn More</a>
+                  <a class="card__button" href="case-two.html" alt="Donorgraphics - Learn more button">Learn More</a>
                </div>
             </section>
 
@@ -204,7 +204,7 @@
                   <h3 class="card__heading" alt="Olivecrest">Olivecrest</h3>
                   <p class="card__icons"><i class="fas fa-pencil-alt" alt="graphic design"></i></p>
                   <p class="card__description" alt="Project description: Olivecrest transforms the lives of at-risk children through the healing power of family.  Efforts focused on website design that covered the needs of each organization chapter.">Olivecrest helps at-risk children that lack a safe home.  Efforts focused on website design that covered the needs of each organization chapter. A One &amp; All agency project.</p>
-                  <a class="card__button" href="https://www.olivecrest.org" target="_blank" alt="Olivecrest website - Learn more button">Learn More</a>
+                  <a class="card__button" href="case-three.html" alt="Olivecrest website - Learn more button">Learn More</a>
                </div>
             </section>
 
